# bhm

./: dvc.yaml  params.yaml  pyproject.toml
conf/: config.yaml
conf/experiment/: default.yaml  depth_1.yaml  depth_4.yaml  epoch_10.yaml  epoch_1000.yaml  width_128.yaml  width_32.yaml  width_64.yaml
docs/: tutorial.tex
results/: .gitignore
src/bhm/: __main__.py  curvature.py  data.py  evaluate.py  experiment.py  model.py  plot.py  run_evaluate.py  run_single.py  run_train.py  sweep.py  train.py
tests/: test_curvature.py
