[project]
name = "bhm"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "jax[cuda12]",
    "equinox",
    "jaxtyping",
    "optax",
    "scikit-learn",
    "matplotlib",
]

[dependency-groups]
dev = [
    "pyright",
    "pytest",
    "dvc",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "standard"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bhm"]
